Fixed overflow on main page and updated gallery

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 	background-size: cover;
 	background-position: center;
 	min-width: 570px;
+	overflow: hidden;
 }
 nav{
 	display: flex;
@@ -133,11 +134,12 @@ nav ul li a:hover{
 .content{
 	position: relative;
 	top: 50%;
-	left:4%;
+	left: 4%;
 	right: 4%;
 	transform: translateY(-50%);
     min-width: 570px;
 	width: fit-content;
+	overflow: hidden;
 }
 h1{
 	color: white;
@@ -166,6 +168,7 @@ h4{
 	padding-left: 4%;
 	padding-right: 4%;
 	min-width: 570px;
+	overflow: hidden;
 }
 .about img{
 	height: auto;
@@ -357,7 +360,7 @@ footer p:nth-child(2){
 
 .gallery {
 	background-color: #191919;
-	width: 100vw;
+	width: 100%;
 	height: 730px;
 	display: flex;
 	flex-wrap: wrap;
@@ -367,11 +370,11 @@ footer p:nth-child(2){
 	min-width: 570px;
 	padding-right: 4%;
 	padding-left: 4%;
+	align-content: flex-start;
 }
 
 .gallery img {
-	width: 30vw;
-	height: 35vh;
+	width: 500px;
 	object-fit: scale-down;
 	padding: 1px;
 }
